@@ -81,8 +81,7 @@ test {
     options.suites(testSuitePath)
 
     jvmArgs '-Xmx2048m', '-Dorg.eclipse.jetty.util.log.class=org.eclipse.jetty.util.log.StrErrLog', '-Duser.timezone=Europe/Zurich',
-        '-Xdebug', '-Xrunjdwp:transport=dt_socket,address=20010,server=y,suspend=n', 
-        '--add-opens=java.base/java.util=ALL-UNNAMED'
+        '-Xdebug', '-Xrunjdwp:transport=dt_socket,address=20010,server=y,suspend=n'
     
     testLogging.showStandardStreams = true
     ignoreFailures = false
